# SyncRoad

./: .gitignore  Makefile  README.md  docker-compose-dev.yml  documentation.md  package-lock.json  upd_bridge.py
.github/workflows/: lint.yml
backend/: Dockerfile  postgres.env  pyproject.toml
backend/api/: main.py  models.py  raspberry.py  test.py
backend/api/Authentification/: models.py
frontend/: .gitignore  Dockerfile  app.json  eslint.config.js  package-lock.json  package.json
frontend/android/: settings.gradle
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/java/com/anonymous/SyncRoadMobile/: MainActivity.kt  MainApplication.kt
frontend/android/app/src/main/res/values/: strings.xml
frontend/app/: _layout.tsx  home.tsx  index.tsx  login.tsx  routing.tsx
frontend/app/(tabs)/: _layout.tsx  home.tsx  home2.tsx  home3.tsx  homescreen.tsx  index.tsx  login.tsx  routing.tsx  types.ts  user.tsx
frontend/assets/images/: truck.png:Zone.Identifier  truck1.png:Zone.Identifier
frontend/components/: ExpoMaps.tsx  HelloWave.tsx  InteractiveMaps.tsx  Maps.tsx  NativeMaps.tsx  StaticMapComponent.tsx
frontend/ios/: Podfile
frontend/ios/SyncRoadMobile/: Info.plist
frontend/ios/SyncRoadMobile.xcodeproj/: project.pbxproj
frontend/ios/SyncRoadMobile.xcodeproj/xcshareddata/xcschemes/: SyncRoadMobile.xcscheme
root/: docker-compose-dev.yml
root/.github/workflows/: lint.yml
