[tool.poetry]
name = "syncroad-backend"
version = "0.1.0"
description = "A FastAPI backend for a robot communication project with 5G and GPS integration."
authors = ["Carlos Eduardo <carlosedm@hotmail.es>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
redis = "^5.2.1"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.39"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^23.3.0" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
